add comments ot app.js and add name entry and form/informal selector

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   </head>
   <body>
     <div id='logindiv'>
+      First Name: <input type='text' id='firstName'>
+      Last Name: <input type='text' id='lastName'>
+      <select id='setFormal'>
+        <option value='fo'>Formal</option>
+        <option value='in'>Informal</option>
+      </select>
       <select id='lang'>
         <option value='en'>English</option>
         <option value='es'>Spanish</option>
